@@ -1,6 +1,7 @@
 
 Revision history for Log-Any-Adapter-DERIV
 {{$NEXT}}
+    - Context addition to logger adapter
 
 0.005     2023-08-24 09:54:52+00:00 UTC
 
